Add IAlias and IAliases and Aliases properties where Triggers also are in scripts
Changed restore logs so that spawn triggers will only add to existing windows/tabs vs creating new ones
Add 'Changing layout requires holding down Control' to the General settings
Add 'Show connect/disconnect in spawn windows' option in Networking settings

4.00.328 - 2024-11-18

Tabs can now drag between windows and into new windows
Added voice selector in Settings for speech playback
Fixed Windows 10 bug where recording icon doesn't appear on taskbar
Fixed crash on wine when connecting to sample characters
Add keyboard shortcut for "Close all windows and exit"
Add .clientOutput and .clientInput CSS styles to WebViews for easy matching of main window styles
Add AddToInputHistory to WebView API
Add "Mute Audio" right click option for tabs
Add "Automatically show history window while navigating input history" global option
Default input history window to off due to above item, users can still set it to always be visible
Improve Network Debugger telnet display, now processes more of telnet to better display options and subnegotiations

4.00.327 - 2024-4-14

Added multiline triggers, that run their child triggers for 'n' lines or 'x' time after first hitting
Added custom UI theme support
Added 'Clear Activity In Current Tab' keyboard shortcut so people can clear the 'Last Read' like indicators without clicking away then back
Added script functions to work with window variables window.GetVariable, window.SetVariable, window.DeleteVariable
Added Server option "Send NAWS on window resize" to do equivalent of `/naws auto` on negotiation and on window resize
Fixed glitch with 'Paste all window settings' causing tabbing between input windows to not work
Fixed weird undo behavior in input window, should work more as expected now.
Fixed a couple map editing crashes, one due to undoing a delete, and another when moving exit end points